@@ -141,6 +141,22 @@ int libbde_utf8_password_calculate_hash(
 
 		goto on_error;
 	}
+	if( libhmac_sha256_calculate(
+	     password_hash,
+	     password_hash_size,
+	     password_hash,
+	     password_hash_size,
+	     error ) != 1 )
+	{
+		liberror_error_set(
+		 error,
+		 LIBERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBERROR_RUNTIME_ERROR_SET_FAILED,
+		 "%s: unable to calculate password hash.",
+		 function );
+
+		goto on_error;
+	}
 	if( memory_set(
 	     utf16_stream,
 	     0,
@@ -260,6 +276,22 @@ int libbde_utf16_password_calculate_hash(
 	if( libhmac_sha256_calculate(
 	     &( utf16_stream[ 2 ] ),
 	     utf16_stream_size - 2,
+	     password_hash,
+	     password_hash_size,
+	     error ) != 1 )
+	{
+		liberror_error_set(
+		 error,
+		 LIBERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBERROR_RUNTIME_ERROR_SET_FAILED,
+		 "%s: unable to calculate password hash.",
+		 function );
+
+		goto on_error;
+	}
+	if( libhmac_sha256_calculate(
+	     password_hash,
+	     password_hash_size,
 	     password_hash,
 	     password_hash_size,
 	     error ) != 1 )
@@ -401,7 +433,6 @@ int libbde_password_calculate_key(
 
 		return( -1 );
 	}
-/* TODO
 	if( memory_copy(
 	     &( password_key_data.initial_sha256_hash ),
 	     password_hash,
@@ -412,23 +443,6 @@ int libbde_password_calculate_key(
 		 LIBERROR_ERROR_DOMAIN_MEMORY,
 		 LIBERROR_MEMORY_ERROR_COPY_FAILED,
 		 "%s: unable to copy password hash to password key data.",
-		 function );
-
-		return( -1 );
-	}
-*/
-	if( libhmac_sha256_calculate(
-	     password_hash,
-	     password_hash_size,
-	     password_key_data.initial_sha256_hash,
-	     LIBHMAC_SHA256_HASH_SIZE,
-	     error ) != 1 )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBERROR_RUNTIME_ERROR_SET_FAILED,
-		 "%s: unable to calculate SHA256.",
 		 function );
 
 		return( -1 );
